# codetldr

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
build-semantic/: CMakeCache.txt
cmake/: FetchDependencies.cmake  SemanticSearchDeps.cmake
codetldr-plugin/: .mcp.json  README.md
codetldr-plugin/.claude-plugin/: plugin.json
codetldr-plugin/hooks/: hooks.json  pre-tool-use.sh  session-start.sh  stop.sh
codetldr-plugin/scripts/: find-binary.sh
codetldr-plugin/skills/codetldr/: SKILL.md
homebrew-tap/: README.md
homebrew-tap/.github/workflows/: update-formula.yml
homebrew-tap/Formula/: codetldr.rb
src/analysis/: pipeline.cpp  pipeline.h
src/analysis/tree_sitter/: extractor.cpp  extractor.h  language_registry.cpp  language_registry.h  parser.cpp  parser.h  queries.h
src/cli/: doctor_cmd.cpp  doctor_cmd.h  init_cmd.cpp  init_cmd.h  main.cpp  model_cmd.cpp  model_cmd.h  search_cmd.cpp  search_cmd.h  sha256.h
src/common/: errors.h  logging.cpp  logging.h  sha256.h
src/config/: paths.cpp  paths.h  project_dir.cpp  project_dir.h
src/daemon/: coordinator.cpp  coordinator.h  daemon_client.cpp  daemon_client.h  daemonize.cpp  daemonize.h  ipc_server.cpp  ipc_server.h  main.cpp  request_router.cpp  request_router.h  status.cpp  status.h
src/embedding/: chunk_extractor.cpp  chunk_extractor.h  embedding_worker.cpp  embedding_worker.h  model_manager.cpp  model_manager.h  model_registry.h  placeholder.cpp  vector_store.cpp  vector_store.h
src/lsp/: lsp_call_graph_resolver.cpp  lsp_call_graph_resolver.h  lsp_call_hierarchy_resolver.cpp  lsp_call_hierarchy_resolver.h  lsp_dependency_resolver.cpp  lsp_dependency_resolver.h  lsp_framing.cpp  lsp_framing.h  lsp_manager.cpp  lsp_manager.h  lsp_process.cpp  lsp_process.h  lsp_transport.cpp  lsp_transport.h
src/mcp/: main.cpp
src/query/: context_builder.cpp  context_builder.h  hybrid_search_engine.cpp  hybrid_search_engine.h  search_engine.cpp  search_engine.h
src/storage/: database.cpp  database.h  migrations.cpp  migrations.h  schema.h
src/watcher/: debouncer.cpp  debouncer.h  file_watcher.cpp  file_watcher.h  ignore_filter.cpp  ignore_filter.h
tests/: test_call_extractor.cpp  test_cfg_extractor.cpp  test_cfg_schema_upgrade.cpp  test_chunk_extractor.cpp  test_cli_init.cpp  test_context_builder.cpp  test_coordinator_cold_start.cpp  test_daemon_ipc.cpp  test_daemon_lifecycle.cpp  test_debouncer.cpp  test_dfg_extractor.cpp  test_e2e_agentic.sh  test_e2e_cli.sh  test_embedding_pipeline.cpp  test_embedding_worker.cpp  test_file_watcher.cpp  test_fts5_search.cpp  test_hybrid_search.cpp  test_ignore_filter.cpp  test_lsp_call_graph.cpp  test_lsp_call_hierarchy.cpp  test_lsp_dependencies.cpp  test_lsp_framing.cpp  test_lsp_handshake.cpp  test_lsp_manager.cpp  test_lsp_process.cpp  test_lsp_transport.cpp  test_mcp_provider.cpp  test_model_cmd.cpp  test_model_download.cpp  test_model_registry.cpp  test_new_rpc_methods.cpp  test_plugin_artifacts.sh  test_project_init.cpp  test_query_rpc.cpp  test_schema_lsp_tables.cpp  test_schema_v2v3.cpp  test_semantic_search.cpp  test_sqlite_storage.cpp  test_symbol_extractor.cpp  (+3 more)
tests/fixtures/: cfg_sample.c  cfg_sample.cpp  cfg_sample.js  cfg_sample.py  dfg_sample.c  dfg_sample.cpp  dfg_sample.js  dfg_sample.py  sample.c  sample.cpp  sample.go  sample.java  sample.js  sample.kt  sample.lua  sample.m  sample.py  sample.rb  sample.rs  sample.swift  sample.ts  sample.tsx
